<resources>
    <string name="app_name">重庆地灾</string>
    <string name="str_account">账          号:</string>
    <string name="str_account_input_hint">请输入账号！</string>
    <string name="str_login">登录</string>
    <string name="str_isSavepass">记住用户名密码</string>
    <string name="login_progress">正在登陆，请稍后!</string>
    <string name="server_connect_error">服务器连接失败!</string>
    <string name="str_serverip">服务器地址: </string>
    <string name="str_serverport">服务器端口号: </string>
    <string name="str_appkey">app应用ID: </string>
    <string name="str_serveripinput">请输入服务器地址! </string>
    <string name="str_serverportinput">请输入服务器端口号!</string>
    <string name="str_againlogin">账号在异处登陆，请重新登录</string>
    <string name="str_login_failed">登录系统失败</string>
    <string name="str_enterroom_failed">进入房间失败</string>
    <string name="str_lggin_failed">登录失败</string>
    <string name="str_exit">退出</string>
    <string name="str_accept">接受</string>
    <string name="str_refuse">拒绝</string>
    <string name="str_resume">确认</string>
    <string name="str_cancel">取消</string>
    <string name="str_pause">挂断</string>
    <string name="str_send">发送</string>
    <string name="str_call">呼叫</string>
    <string name="str_back">返回</string>
    <string name="str_menu">菜单</string>
    <string name="str_switchcamera">切换摄像头</string>
    <string name="str_setting">设置</string>
    <string name="str_save">保存修改</string>
    <string name="no_onlines">当前没有在线用户</string>
    <string name="str_returncode_bussiness">呼叫对象正忙，请稍后再试</string>
    <string name="str_returncode_offline">呼叫用户不在线</string>
    <string name="str_user_offline">目标用户离线</string>
    <string name="str_returncode_requestcancel">用户取消呼叫</string>
    <string name="str_returncode_requestrefuse">用户拒绝被呼叫</string>
    <string name="str_returncode_disconnect">对方网络异常</string>
    <string name="str_returncode_timeout">呼叫超时</string>
    <string name="sessioning_reqite">请求与您通话！</string>
    <string name="str_calling">呼叫成功，正在等待用户响应</string>
    <string name="session_end">会话已经挂断</string>
    <string name="str_targetwrong">不能呼叫自己！</string>
    <string name="str_endsession">是否想要结束当前通话</string>
    <string name="end_session">结束通话</string>
    <string name="str_networkcheck">当前网络连接有异常，请检查网络</string>
    <string name="str_serverlink_close">与服务器断开连接，错误代码是</string>
    <string name="str_exitresume">是否想要退出整个应用程序</string>
    <string name="str_msgchatlist">文字聊天消息列表</string>
    <string name="str_notifitcation">iCloudSoft正在运行中</string>
    <string name="str_dialog_title_protip">呼叫提示</string>

    <string name="base_url">http://183.230.252.112:19088/rend</string>
    <string name="picPath">d:/cmd/img/</string>
    <string name="panorama">全景图</string>
    <string name="plan">平面图</string>
    <string name="feature">特征图</string>
    <string name="profile">剖面图</string>
    <string name="basic">基本信息</string>
    <string name="disaster">灾害影响</string>
    <string name="geography">地理信息</string>
    <string name="ohter">其他</string>
    <!-- Strings related to login -->
    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="chooese">选择范围</string>
    <string name="currLocation">当前位置：</string>
    <string name="choo">选择范围：</string>
    <string name="workbench">工作平台</string>
    <string name="directory">通讯录</string>
    <string name="setup">系统设置</string>


    <string name="video_capture">视频采集</string>
    <string name="group_intercom">群组对讲</string>
    <string name="video_address">录像地址</string>
    <string name="storage_path">存储路径</string>
    <string name="camera">摄像头</string>
    <string name="sign_out">注销登录</string>

    <string name="frames_number">帧数</string>
    <string name="stream">码流</string>
    <string name="resolving_power">分辨率</string>
    <string name="system_information">系统信息</string>
    <string name="my_task">我的任务</string>
    <string name="complete_task">调查信息</string>
    <string name="create_task">发起任务</string>
    <string name="title_activity_my_task">MyTaskActivity</string>
    <string name="title_activity_complete_task">CompleteTaskActivity</string>
    <string name="title_activity_create_task">CreateTaskActivity</string>
    <string name="search">搜索</string>
    <string name="searchHistory">搜索历史</string>
    <string name="clearSearchHistory">清除历史记录</string>
    <string name="str_search_hint">请输入姓名或者电话搜索</string>
    <string name="str_searchHistory">搜索历史</string>
    <string name="str_clearSearchHistory">清除历史</string>
    <string name="title_activity_fill_info">FillInfoActivity</string>
    <string name="title_activity_complete_info">CompleteInfoActivity</string>
    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>
</resources>