<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/bg_blue"
        android:gravity="center"
        android:text="@string/chooese"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:src="@drawable/ic_photo_back" />

    <LinearLayout
        android:id="@+id/ll-1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/currLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currLocation"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll-2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll-1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/choo"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/choose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(千米)" />
    </LinearLayout>

    <Button
        android:id="@+id/chooseBtn"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_below="@id/ll-2"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:background="@drawable/city_chooese"
        android:text="确定"
        android:textColor="@color/white"
        android:textSize="16sp" />
</RelativeLayout>